<resources>
    <string name="app_name">Мыскова Алина</string>
    <string name="rate">Рейтинг</string>
    <string name="code_strings">Написано строк кода</string>
    <string name="projects">Проектов</string>
    <string name="vk">Профиль в VK</string>
    <string name="mobile">Мобильный телефон</string>
    <string name="e_mail">E-mail</string>
    <string name="git">Репозиторий</string>
    <string name="about">О себе</string>
    <string name="profile">Профиль</string>
    <string name="team">Контакты</string>
    <string name="user_profile.placeholder.image">Изменить фотографию профиля</string>
    <string name="user_profile_dialog_gallery">Загрузить из галереи</string>
    <string name="user_profile_dialog_shot">Сделать снимок</string>
    <string name="user_profile_dialog_cancel">Отмена</string>
    <string name="user_profile_dialog_title">Изменить фотографию профиля</string>
    <string name="image_from_camera_error">Не удалось загрузить фото</string>
    <string name="pick_image_from_gallery">Выберите фото</string>
    <string name="check_permission_request_msg">Для корректной работы приложения необходимо разрешить работу с камерой и памятью</string>
    <string name="check_permission_request_button">Разрешить</string>
    <string name="password">Пароль</string>
    <string name="enter">ВОЙТИ</string>
    <string name="remember_pass">Забыли пароль?</string>
    <string name="permission_denied_error">Невозможно выполнить действие: нет разрешения на использование ресурсов</string>
</resources>
