<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.MainActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_extra"
        android:background="@color/gray"
        android:orientation="horizontal"
        android:padding="@dimen/space_normal_16">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/header.data"
                android:text="5"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/header.hint"
                android:text="@string/rate"/>
        </LinearLayout>
        <View
            style="@style/divider_vertical"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/header.data"
                android:text="5"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/header.hint"
                android:text="@string/code_strings"/>
        </LinearLayout>
        <View
            style="@style/divider_vertical"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/header.data"
                android:text="5"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/header.hint"
                android:text="@string/projects"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_call_black_24dp"/>
        <LinearLayout
            android:layout_height="wrap_content"
            style="@style/layout_data">
            <android.support.design.widget.TextInputLayout
                android:layout_height="match_parent"
                android:layout_width="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_data"
                    android:inputType="phone"
                    android:hint="@string/mobile"
                    android:text="+7(904)3364604"
                    >
                </EditText>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_phone_in_talk_black_24dp"/>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        style="@style/divider_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_mail_black_24dp"/>
        <LinearLayout
            android:layout_height="wrap_content"
            style="@style/layout_data">
            <android.support.design.widget.TextInputLayout
                android:layout_height="match_parent"
                android:layout_width="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_data"
                    android:inputType="textEmailAddress"
                    android:hint="@string/e_mail"
                    android:text="a.myskova@yandex.ru"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_send_black_24dp"/>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        style="@style/divider_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            style="@style/icon.left"
            android:src="@drawable/vk"/>
        <LinearLayout
            android:layout_height="wrap_content"
            style="@style/layout_data">
            <android.support.design.widget.TextInputLayout
                android:layout_height="match_parent"
                android:layout_width="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_data"
                    android:inputType="textUri"
                    android:hint="@string/vk"
                    android:text="vk.com/alinablake"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_visibility_black_24dp"/>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        style="@style/divider_line"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            style="@style/icon.left"
            android:src="@drawable/git"/>
        <LinearLayout
            android:layout_height="wrap_content"
            style="@style/layout_data">
            <android.support.design.widget.TextInputLayout
                android:layout_height="match_parent"
                android:layout_width="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_data"
                    android:inputType="textUri"
                    android:hint="@string/git"
                    android:text="github.com/AMkiri/DevIntensive"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_visibility_black_24dp"/>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        style="@style/divider_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_account_circle_black_24dp"/>
        <LinearLayout
            android:layout_height="wrap_content"
            style="@style/layout_data">
            <android.support.design.widget.TextInputLayout
                android:layout_height="match_parent"
                android:layout_width="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_data"
                    android:inputType="text"
                    android:hint="@string/about"
                    android:text="Не могу не быть программистом."/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
